# tetris_evolve

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  DESIGN.md  README.md  pyproject.toml  solution.json  tetris_agent.py
.github/workflows/: lint.yml  test.yml
configs/: atari_pong.yaml  example_config.yaml  example_config_haiku.yaml  example_config_restricted_env.yaml  example_config_sonnet.yaml  gemini_direct_flash.yaml  google_gemini_3_mixed.yaml  google_gemini_flash_thinking.yaml  openai_gpt4o_mini.yaml  openai_o3_mini_reasoning.yaml  openevolve_config_gemini_flash.yaml  openrouter_deepseek.yaml  openrouter_gemini_flash.yaml  openrouter_gemini_flash_thinking.yaml  openrouter_gemini_pro.yaml  openrouter_mixed_claude_gemini.yaml  openrouter_opus_thinking_mixed.yaml  shinka_evolve_circle_packing.yaml  tetris.yaml
docs/: CONTEXT_SIZE_ANALYSIS.md  DESIGN.md  DESIGN_CIRCLE_PACKING.md  DESIGN_generation_at_once.md  IMPLEMENTATION_TODO.md  OPENROUTER_INTEGRATION_PLAN.md  SELECTION_MECHANISM_ANALYSIS.md  context_report.md  llm_driven_selection_design.md
docs/design/: query_child_llm_design.md
docs/prompts/: pr1_trials_repl_variable.md
docs/research/: alphaevolve_summary.md  rlm_summary.md
experiments/: validate_design.py
experiments/circle_packing_gemini_flash_20251224_183243/: config.json  root_llm_log.jsonl
experiments/circle_packing_gemini_flash_20251224_183721/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_gemini_flash_20251224_222143/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_gemini_flash_20251224_224418/: cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_mixed_20251230_181759/: config.json
experiments/circle_packing_opus_thinking_mixed_20251230_181833/: config.json
experiments/circle_packing_opus_thinking_mixed_20251230_182028/: root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251230_184447/: config.json
experiments/circle_packing_opus_thinking_mixed_20251230_184523/: calibration_notes.yaml  config.json  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251230_190439/: calibration_notes.yaml  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251230_191346/: calibration_notes.yaml  config.json  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251230_193401/: calibration_notes.yaml  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251230_222235/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251230_235247/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251231_004348/: cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251231_135159/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_opus_thinking_mixed_20251231_163307/: config.json
experiments/circle_packing_opus_thinking_mixed_20251231_163512/: calibration_notes.yaml  experiment.json  root_llm_log.jsonl
experiments/circle_packing_v1_20251204_120618/: config.json  root_llm_log.jsonl
experiments/circle_packing_v1_20251204_141125/: cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_v1_20251204_143450/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_v1_20251204_162314/: root_llm_log.jsonl
experiments/circle_packing_v1_20251204_165935/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_v1_20251205_094203/: root_llm_log.jsonl
experiments/circle_packing_v1_20251205_100114/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
experiments/circle_packing_v1_20251205_142057/: experiment.json
experiments/circle_packing_v1_20251205_150313/: config.json  experiment.json
experiments/circle_packing_v1_20251205_153007/: experiment.json
experiments/circle_packing_v1_20251208_121355/: config.json  root_llm_log.jsonl
experiments/circle_packing_v1_20251209_151828/: config.json
experiments/circle_packing_v1_20251209_151839/: root_llm_log.jsonl
experiments/circle_packing_v1_20251216_174624/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
planning/: 00_overview.md  01_program_evaluator.md  02_cost_tracker.md  03_experiment_tracker.md  04_llm_client.md  05_child_llm_executor.md  06_root_llm_interface.md  07_evolution_controller.md  08_integration_tests.md  09_e2e_tests.md
saved_experiments/circle_packing_gemini_3_mixed_20260108_100912/: config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
saved_experiments/openevolve_config_gemini_flash_20260111_191309/: calibration_notes.yaml  config.json  cost_tracking.json  experiment.json  root_llm_log.jsonl
saved_experiments/openevolve_config_gemini_flash_20260114_120026/: calibration_notes.yaml  cost_tracking.json  experiment.json  root_llm_log.jsonl
saved_experiments/shinka_evolve_circle_packing_20260108_001912/: calibration_notes.yaml  (+2 more)
scripts/: setup_restricted_env.sh
tests/: __init__.py  conftest.py  helpers.py  test_bug_confirmations.py  test_bug_fixes_verification.py  test_child_llm.py  test_cli.py  test_code_extraction.py  test_config.py  test_controller.py  test_cost_tracker.py  test_e2e.py  test_evaluator.py  test_evolution_api.py  test_exceptions.py  test_experiment_tracker.py  test_integration.py  test_llm_client.py  test_llm_selection.py  test_logger.py  test_main.py  test_parallel_worker.py  test_prompt_substitution.py  test_prompts.py  test_repl.py  test_repl_proxies.py  test_resume.py  test_root_llm.py
(+2579 files in other folders)
